--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "express": "^4.17.1",
-    "natural": "^2.1.5"
+    "natural": "^2.1.5",
+    "sleep": "^6.3.0",
+    "timeunit": "^1.1.1"
   }
 }
